css/blog-stylesheet.css
body{
  color: #0D0F0F;
  background-color: #17A3A5;
  font-family: 'Vollkorn', serif;
  font-size: 1em;
}

header{
  margin-top: 2.208333333%;
  margin-bottom: 1.208333333%;
  border-bottom: thick dotted black;
  text-align: center;
  padding-top: 2.55%;
  padding-bottom: 3%;
}

header h3{
  font-size: 218.75%;
  font-weight: bold;
  margin-top: 2.0833333333%;
  margin-bottom: 2.0833333333%;
}

header p{
  font-size: 125%;
  margin-bottom: 2.208333333%;
}

.blog{
  padding: 1.04166666666% 1.04166666666% 1.04166666666% 1.04166666666%;
  float: left;
  margin-left: 2.08%;
  width: 70%;
  height: 100%;
  text-align: center;
  background-color: #068587;
  border-radius: 5%;
}
.title{padding-top: 5%;}
#post-title{
  font-size: 180%;
  font-weight: bold;
  padding-bottom: 2%;
}

#sub-title{
  font-size: 110%;
  line-height: 100%;
}

#post{
  font-size: 120%;
  line-height: 160%;
  white-space: pre-wrap;
  padding-left: 2.0833333333%;
  padding-right: 2.0833333333%;
  padding-bottom: 1%;
}
#post p{
  text-align: justify;
  text-indent: 1.12em;
}
.post-table{width: 100%;}
.post-table td{
  padding-right: 2%;
  padding-left: 1%;
  font-size: 80%;
}

#post b{font-size: 156.25%;}

#post em{
  font-style: italic;
  font-size: 80%;
  color: #261C1B;
  background-color: #A64236;
  padding-left: 0.7%;
  padding-right: 0.7%;
  border-radius: 30%;}

#post code{
  position: relative;
}

#post img{
  display: inline-block;
  position: relative;
  margin-left: 4.083333333%;
  width: 55%;
  height: auto;
}

.side {
  padding-top: 3%;
  float: right;
  width: 20%;
  height: 100%;
  text-align: center;
}
nav{
  margin-right: 2.08%;
  position: relative;
  width: 90%;
  background-color: #225B66;
  border-radius: 30%;
}
nav>ul{
  width: 90%;
  height: 95%;
  padding-right: 5.208333333%;
  line-height: 250%;
}

#sub-menu{
  margin: 0;
  padding: 0;
  width: 100%;
}
#sub-menu li{position: relative;}
#sub-menu li ul{
  position: absolute;
  right: 85%;
  top: -90%;
  display: none;
}
#sub-menu li:hover ul{display: block;}
#sub-menu li ul{
  border: 0.1em solid black;
  padding-left: 0.5em;
  padding-right: 0.5em;
  background-color: #225B66;
  }
nav a{
  text-decoration: none;
  white-space: pre;
  display: inline-block;
}

a{
  color: #8DBF67;
}

a:visited{
  color: #FCCB5F;
}

nav a:hover{
  color:#006600;
  background-color: #6DFFFA;}

.social-icon{
  clear: both;
  text-align: center;
  margin: 2.083333333%;
  /*border-top:thin dotted black;*/
}

.social-icon .container{
  padding-top: 1.04166666666%;
  display: inline-block;
  height: 80%;
  width: 80%;
}

.social-icon img{
  margin-left: 3.083333333%;
  margin-right: 3.083333333%;
}

.social-icon img:hover{
  opacity: 0.5;
  -ms-transform: scale(0.7,0.7);
  -webkit-transform: scale(0.7,0.7);
  transform: scale(0.7,0.7);
}

footer{
  clear: both;
  padding-bottom: 1.04166666666%;
  text-align: center;
}
footer section{
  width: 100%;
  height: 100%;
}
footer a{display: inline-block;}
footer section p{
  font-size: 90%;
  padding-bottom: 1.04166666666%;
  white-space: pre-line;
  line-height: 130%;
}

.highlighttable{
  white-space: pre-line;
  width: 95%;
}

.code pre{
  text-align: left;
  padding-top: 1em;
  padding-left: 1em;
  width: 100%;
  overflow-x: scroll;
  font-family: "Consolas";
  font-size: 80%;
}

.linenos{
  color: #0086f7;
  padding-left: 0.5em;
  padding-right: 0.25em;
  border-collapse: collapse;
  font-family: "Consolas";
}

